# accuratus

./: .gitignore  .travis.yml  LICENSE.md  README.org  accuratus.cabal
app/: Main.hs
ci/: lint-added.sh  lint-all.sh  lint.sh
hooks/: install.sh  pre-commit
src/: Ast.hs  Interp.hs  Utility.hs
src/Analyses/: ErrorComplexity.hs  ForwardDiff.hs  FreeVars.hs  Reduce.hs  SymDiff.hs
src/Parser/: Impl.hs
